@@ -5,6 +5,9 @@ CHANGELOG
 1.2.2 (unreleased)
 ------------------
 
+- Use lower email address in billboardad as default contact mail.
+  [Julian Infanger]
+
 - Use colorbox to display images in overlay.
   [Julian Infanger]
 
